<resources>
    <string name="app_name">Tetris</string>


    <string name="title_activity_game">Jouer</string>
    <string name="score">Score : </string>
    <!-- string menu pause -->
    <string name="restart">Rejouer </string>
    <!-- string dialog highscore -->
    <string name="highscore1">1. </string>
    <string name="highscore2">2. </string>
    <string name="highscore3">3. </string>
    <string name="highscore4">4. </string>
    <string name="highscore5">5. </string>
    <string name="player_pseudo_edit">Votre pseudo..</string>


    <string name="title_activity_page_intructions">Instructions</string>
    <string name="classicModeString">Mode Classique</string>
        <string name="textInstructionsClassique">
            En mode classique, Tetris met le joueur au défi de réaliser des lignes complètes en déplaçant des pièces de formes
            différentes, les tétriminos, qui défilent depuis le haut vers le bas de l\'écran. Les lignes complétées disparaissent tout en
            rapportant des points et le joueur peut de nouveau remplir les cases libérées. Le jeu n\'a pas de fin : le joueur perd la partie
            lorsqu\'un tétrimino reste bloqué en haut. Il doit donc résister le plus longtemps à la chute continue des tétriminos, afin de
            réaliser le meilleur score possible.
        </string>
    <string name="chronoModeString">Mode Contre-la-montre</string>
        <string name="textInstructionsCLM">
            En mode contre-la-montre, les règles sont relativement les mêmes sauf que le but est de résister le plus longtemps possible. Le temps en début de parti est de 90 secondes et il est possible de gagner du temps à chaque ligne réalisée.
        </string>
    <string name="howToPlay">Comment jouer ?</string>
        <string name="textInstructionsEvents">Pour déplacer une pièce il suffit de cliquer sur un des côtés de l\'écran, la pièce se déplacera du côté cliqué.
            En cliquant au centre de l\'écran, la pièce subira une rotation de 90° dans le sens horaire. Un clic au bas de l\'écran,au centre, entraînera une chute rapide et instantanée de la pièce.
        </string>

    <string name="title_activity_options">Options</string>
        <string name="themes">Thème</string>
        <string name="themeClassique">Classique</string>
        <string name="themePolytech">Polytech</string>
        <string name="themeWalkingDead">Walking Dead</string>
        <string name="mode">Mode</string>
        <string name="modeClassique">Classique</string>
        <string name="modeCLM">Contre-la-montre</string>
        <string name="vit">Vitesse</string>
        <string name="vit1">1</string>
        <string name="vit2">2</string>
        <string name="vit3">3</string>
        <string name="accel">Accélération</string>
        <string name="accel0">0</string>
        <string name="accel1">1</string>
        <string name="accel2">2</string>
        <string name="musique">Musique</string>
        <string name="openMusique">Choisir une musique</string>

    <string name="title_activity_highscores">HighscoresActivity</string>
        <string name="highscores">Top 5</string>
        <string name="scoreClassique">CLASSIQUE</string>
        <string name="scoreChrono">CHRONO</string>
        <string name="hashtag">#</string>
        <string name="nomTitle">Pseudo</string>
        <string name="scoreTitle">Score</string>
        <string name="pos1">1</string>
        <string name="pos2">2</string>
        <string name="pos3">3</string>
        <string name="pos4">4</string>
        <string name="pos5">5</string>

    <string name="aboutbtn">\?</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="GAME_STATE_CHANGE">com.polytech.stfu.jeu.GAME_STATE_CHANGE</string>
    <string name="GAME_PAUSE">com.polytech.stfu.jeu.GAME_PAUSE</string>
    <string name="GAME_END">com.polytech.stfu.jeu.GAME_END</string>
    <string name="GAME_UNPAUSE">com.polytech.stfu.jeu.GAME_UNPAUSE</string>
    <string name="GAME_RESTART">com.polytech.stfu.jeu.GAME_RESTART</string>

    <string name="aboutPage">A Propos</string>
        <string name="about1">
            Polytris est une application créée par Adrien COUËRON, Benjamin LELIEVRE et Simon VERGNAUD et testée par Maxime GUILLOTEAU.
        </string>
        <string name="about2">
            Cette application s\'intègre dans le cadre d\'un Projet en Java à Polytech Nantes, encadré par M. Antoine PIGEAU.
        </string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>
