<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pauseName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText
        android:hint="Votre pseudo.."
        android:id="@+id/player_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/highscore1"
        android:text="@string/highscore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/highscore2"
        android:text="@string/highscore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/highscore3"
        android:text="@string/highscore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/highscore4"
        android:text="@string/highscore4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/highscore5"
        android:text="@string/highscore5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
