<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollIntruction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.polytech.stfu.ihm.InstructionsActivity"
        android:id="@+id/linearInstructions"
        >
        <TextView
            android:text="@string/textInstructionsClassique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:text="@string/textInstructionsCLM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:text="@string/textInstructionsEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

    </LinearLayout>

</ScrollView>



